src/BulletSharpPInvoke/Collision/CollisionWorld.cs

#if __iOS__
using MonoTouch;
#endif
using SiliconStudio.Core.Mathematics;
using System;
using System.Runtime.InteropServices;
using System.Security;
using System.Collections.Generic;

namespace BulletSharp
{
	public class LocalShapeInfo : IDisposable
	{
		internal IntPtr _native;

		internal LocalShapeInfo(IntPtr native)
		{
			_native = native;
		}

		public LocalShapeInfo()
		{
			_native = btCollisionWorld_LocalShapeInfo_new();
		}

		public int ShapePart
		{
			get { return btCollisionWorld_LocalShapeInfo_getShapePart(_native); }
			set { btCollisionWorld_LocalShapeInfo_setShapePart(_native, value); }
		}

		public int TriangleIndex
		{
			get { return btCollisionWorld_LocalShapeInfo_getTriangleIndex(_native); }
			set { btCollisionWorld_LocalShapeInfo_setTriangleIndex(_native, value); }
		}

		public void Dispose()
		{
			Dispose(true);
			GC.SuppressFinalize(this);
		}

		protected virtual void Dispose(bool disposing)
		{
			if (_native != IntPtr.Zero)
			{
				btCollisionWorld_LocalShapeInfo_delete(_native);
				_native = IntPtr.Zero;
			}
		}

		~LocalShapeInfo()
		{
			Dispose(false);
		}

		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btCollisionWorld_LocalShapeInfo_new();
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern int btCollisionWorld_LocalShapeInfo_getShapePart(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern int btCollisionWorld_LocalShapeInfo_getTriangleIndex(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_LocalShapeInfo_setShapePart(IntPtr obj, int value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_LocalShapeInfo_setTriangleIndex(IntPtr obj, int value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_LocalShapeInfo_delete(IntPtr obj);
	}

	public class LocalRayResult
	{
		internal IntPtr _native;

		internal LocalRayResult(IntPtr native)
		{
			_native = native;
		}

		public LocalRayResult(CollisionObject collisionObject, LocalShapeInfo localShapeInfo, Vector3 hitNormalLocal, float hitFraction)
		{
			_native = btCollisionWorld_LocalRayResult_new(collisionObject._native, localShapeInfo._native, ref hitNormalLocal, hitFraction);
		}

		public CollisionObject CollisionObject
		{
			get { return CollisionObject.GetManaged(btCollisionWorld_LocalRayResult_getCollisionObject(_native)); }
			set { btCollisionWorld_LocalRayResult_setCollisionObject(_native, value._native); }
		}

		public float HitFraction
		{
			get { return btCollisionWorld_LocalRayResult_getHitFraction(_native); }
			set { btCollisionWorld_LocalRayResult_setHitFraction(_native, value); }
		}

		public Vector3 HitNormalLocal
		{
			get
			{
				Vector3 value;
				btCollisionWorld_LocalRayResult_getHitNormalLocal(_native, out value);
				return value;
			}
			set { btCollisionWorld_LocalRayResult_setHitNormalLocal(_native, ref value); }
		}

		public LocalShapeInfo LocalShapeInfo
		{
			get { return new LocalShapeInfo(btCollisionWorld_LocalRayResult_getLocalShapeInfo(_native)); }
			set { btCollisionWorld_LocalRayResult_setLocalShapeInfo(_native, value._native); }
		}

		public void Dispose()
		{
			Dispose(true);
			GC.SuppressFinalize(this);
		}

		protected virtual void Dispose(bool disposing)
		{
			if (_native != IntPtr.Zero)
			{
				btCollisionWorld_LocalRayResult_delete(_native);
				_native = IntPtr.Zero;
			}
		}

		~LocalRayResult()
		{
			Dispose(false);
		}

		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btCollisionWorld_LocalRayResult_new(IntPtr collisionObject, IntPtr localShapeInfo, [In] ref Vector3 hitNormalLocal, float hitFraction);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btCollisionWorld_LocalRayResult_getCollisionObject(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern float btCollisionWorld_LocalRayResult_getHitFraction(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_LocalRayResult_getHitNormalLocal(IntPtr obj, [Out] out Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btCollisionWorld_LocalRayResult_getLocalShapeInfo(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_LocalRayResult_setCollisionObject(IntPtr obj, IntPtr value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_LocalRayResult_setHitFraction(IntPtr obj, float value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_LocalRayResult_setHitNormalLocal(IntPtr obj, [In] ref Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_LocalRayResult_setLocalShapeInfo(IntPtr obj, IntPtr value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_LocalRayResult_delete(IntPtr obj);
	}

	public class RayResultCallback : IDisposable
	{
		internal IntPtr _native;

		internal RayResultCallback(IntPtr native)
		{
			_native = native;
		}

		public float AddSingleResult(LocalRayResult rayResult, bool normalInWorldSpace)
		{
			return btCollisionWorld_RayResultCallback_addSingleResult(_native, rayResult._native, normalInWorldSpace);
		}

		public bool NeedsCollision(BroadphaseProxy proxy0)
		{
			return btCollisionWorld_RayResultCallback_needsCollision(_native, proxy0._native);
		}

		public float ClosestHitFraction
		{
			get { return btCollisionWorld_RayResultCallback_getClosestHitFraction(_native); }
			set { btCollisionWorld_RayResultCallback_setClosestHitFraction(_native, value); }
		}

		public short CollisionFilterGroup
		{
			get { return btCollisionWorld_RayResultCallback_getCollisionFilterGroup(_native); }
			set { btCollisionWorld_RayResultCallback_setCollisionFilterGroup(_native, value); }
		}

		public short CollisionFilterMask
		{
			get { return btCollisionWorld_RayResultCallback_getCollisionFilterMask(_native); }
			set { btCollisionWorld_RayResultCallback_setCollisionFilterMask(_native, value); }
		}

		public CollisionObject CollisionObject
		{
			get { return CollisionObject.GetManaged(btCollisionWorld_RayResultCallback_getCollisionObject(_native)); }
			set { btCollisionWorld_RayResultCallback_setCollisionObject(_native, value._native); }
		}

		public uint Flags
		{
			get { return btCollisionWorld_RayResultCallback_getFlags(_native); }
			set { btCollisionWorld_RayResultCallback_setFlags(_native, value); }
		}

		public bool HasHit
		{
			get { return btCollisionWorld_RayResultCallback_hasHit(_native); }
		}

		public void Dispose()
		{
			Dispose(true);
			GC.SuppressFinalize(this);
		}

		protected virtual void Dispose(bool disposing)
		{
			if (_native != IntPtr.Zero)
			{
				btCollisionWorld_RayResultCallback_delete(_native);
				_native = IntPtr.Zero;
			}
		}

		~RayResultCallback()
		{
			Dispose(false);
		}

		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern float btCollisionWorld_RayResultCallback_addSingleResult(IntPtr obj, IntPtr rayResult, bool normalInWorldSpace);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern float btCollisionWorld_RayResultCallback_getClosestHitFraction(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern short btCollisionWorld_RayResultCallback_getCollisionFilterGroup(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern short btCollisionWorld_RayResultCallback_getCollisionFilterMask(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btCollisionWorld_RayResultCallback_getCollisionObject(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern uint btCollisionWorld_RayResultCallback_getFlags(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern bool btCollisionWorld_RayResultCallback_hasHit(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern bool btCollisionWorld_RayResultCallback_needsCollision(IntPtr obj, IntPtr proxy0);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_RayResultCallback_setClosestHitFraction(IntPtr obj, float value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_RayResultCallback_setCollisionFilterGroup(IntPtr obj, short value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_RayResultCallback_setCollisionFilterMask(IntPtr obj, short value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_RayResultCallback_setCollisionObject(IntPtr obj, IntPtr value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_RayResultCallback_setFlags(IntPtr obj, uint value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btCollisionWorld_RayResultCallback_delete(IntPtr obj);
	}

	public class ClosestRayResultCallback : RayResultCallback
	{
		internal ClosestRayResultCallback(IntPtr native)
			: base(native)
		{
		}

		public ClosestRayResultCallback(ref Vector3 rayFromWorld, ref Vector3 rayToWorld)
			: base(btCollisionWorld_ClosestRayResultCallback_new(ref rayFromWorld, ref rayToWorld))
		{
		}

		public ClosestRayResultCallback(Vector3 rayFromWorld, Vector3 rayToWorld)
			: base(btCollisionWorld_ClosestRayResultCallback_new(ref rayFromWorld, ref rayToWorld))
		{
		}

		public Vector3 HitNormalWorld
		{
			get
			{
				Vector3 value;
				btCollisionWorld_ClosestRayResultCallback_getHitNormalWorld(_native, out value);
				return value;
			}
			set { btCollisionWorld_ClosestRayResultCallback_setHitNormalWorld(_native, ref value); }
		}

		public Vector3 HitPointWorld
		{
			get
			{
				Vector3 value;
				btCollisionWorld_ClosestRayResultCallback_getHitPointWorld(_native, out value);
				return value;
			}
			set { btCollisionWorld_ClosestRayResultCallback_setHitPointWorld(_native, ref value); }
		}

		public Vector3 RayFromWorld
		{
			get
			{
				Vector3 value;
				btCollisionWorld_ClosestRayResultCallback_getRayFromWorld(_native, out value);
				return value;
			}
			set { btCollisionWorld_ClosestRayResultCallback_setRayFromWorld(_native, ref value); }
		}

		public Vector3 RayToWorld
		{
			get
			{
				Vector3 value;
				btCollisionWorld_ClosestRayResultCallback_getRayToWorld(_native, out value);
				return value;
			}
			set { btCollisionWorld_ClosestRayResultCallback_setRayToWorld(_native, ref value); }
		}
